add_subdirectory(fmt_custom_level)
add_subdirectory(fmt_multi)
add_subdirectory(fmt_normal)
add_subdirectory(fmt_tests)

add_subdirectory(binary_custom)
add_subdirectory(binary_fixed_id)
add_subdirectory(binary_stable_ids)
add_subdirectory(binary_normal)

add_subdirectory(custom)
add_subdirectory(secure)
