add_tests(
    FILES
    callback
    field_extract
    field_insert
    field_matchers
    handler
    handler_builder
    handler_uninit
    indexed_builder
    indexed_callback
    indexed_handler
    indexed_handler_uninit
    message
    relaxed_message
    send
    LIBRARIES
    cib)

add_subdirectory(fail)
